--- a/package.json
+++ b/package.json
@@ -4,5 +4,10 @@
   "repository": "https://github.com/vinsifroid/LSINF1212---BeerSearch.git",
   "author": "julien1bastin <julienbastin96@hotmail.com>",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "babel-preset-es2015": "^6.22.0",
+    "babel-register": "^6.23.0",
+    "mocha": "^3.2.0"
+  }
 }
