--- a/Code/package.json
+++ b/Code/package.json
@@ -6,8 +6,13 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
+    "babel": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-register": "^6.23.0",
+    "cucumber": "^1.3.2",
     "mocha": "^3.2.0"
+  },
+  "scripts": {
+    "test": "mocha"
   }
 }
