--- a/Code/package.json
+++ b/Code/package.json
@@ -8,11 +8,11 @@
   "devDependencies": {
     "babel": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
-    "babel-register": "^6.23.0",
+    "babel-register": "^6.24.0",
     "cucumber": "^1.3.2",
     "mocha": "^3.2.0"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha --compilers js:babel-register"
   }
 }
