--- a/Code/package.json
+++ b/Code/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "LSINF1212---BeerSearch",
-  "version": "1.0.0",
+  "name": "BeerSearch",
+  "version": "0.1.0",
   "repository": "https://github.com/vinsifroid/LSINF1212---BeerSearch.git",
-  "author": "julien1bastin <julienbastin96@hotmail.com>",
   "license": "MIT",
   "private": true,
+  "bugs": "https://github.com/vinsifroid/LSINF1212---BeerSearch/issues",
+  "config": {
+    "port": "8080"
+  },
   "devDependencies": {
     "babel": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
@@ -14,5 +17,8 @@
   },
   "scripts": {
     "test": "mocha --compilers js:babel-register"
+  },
+  "dependencies": {
+    "express": "^4.15.2"
   }
 }
