Ajoute pages html basiques avec support bootstrap

--- a/Code/package.json
+++ b/Code/package.json
@@ -19,6 +19,7 @@
     "test": "mocha --compilers js:babel-register"
   },
   "dependencies": {
+    "bootstrap": "3",
     "express": "^4.15.2"
   }
 }
