--- a/Code/package.json
+++ b/Code/package.json
@@ -12,6 +12,7 @@
     "babel": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-register": "^6.24.0",
+    "chai": "^3.5.0",
     "cucumber": "^1.3.2",
     "mocha": "^3.2.0"
   },
