--- a/Code/package.json
+++ b/Code/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "bootstrap": "3",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "mongodb": "^2.2.26"
   }
 }
