--- a/Code/package.json
+++ b/Code/package.json
@@ -22,7 +22,22 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "express": "^4.15.2",
+    "express-session": "^1.15.2",
+    "express-validator": "^3.1.3",
+    "cookie-parser": "^1.4.3",
+    "cross-env": "^4.0.0",
+    "errorhandler": "^1.5.0",
+    "mongodb": "^2.2.26",
+    "mongoose": "^4.9.9",
+    "body-parser": "^1.17.1",
+    "connect-mongo": "^1.3.2",
     "osmtogeojson": "^3.0.0-beta.0",
-    "mongodb": "^2.2.26"
+    "morgan": "^1.8.1",
+    "ms": "^1.0.0",
+    "nodemon": "^1.11.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0",
+    "require-directory": "^2.1.1"
   }
 }
