--- a/Code/package.json
+++ b/Code/package.json
@@ -25,6 +25,7 @@
     "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
     "cross-env": "^4.0.0",
+    "ejs": "^2.5.6",
     "errorhandler": "^1.5.0",
     "express": "^4.15.2",
     "express-session": "^1.15.2",
